--- a/src/assets/css/global/variables.css
+++ b/src/assets/css/global/variables.css
@@ -43,13 +43,15 @@
 
 	/* Colors */
 
---light: hsla(226, 100%, 97%, 1);
---dark: hsla(195, 100%, 6%, 1);
+--light: hsla(226, 50%, 97%, 1);
+--dark: hsla(195, 90%, 6%, 1);
 
 --primary: hsla(160, 88%, 19%, 1);
---secondary: hsla(29, 96%, 18%, 1);
+--secondary: hsla(343, 90%, 46%, 1);
+/* Against '--light', passes all AA and AAA for text over 18pt/bold 14pt */
+/* Against '--dark', only passes AA for text over 18pt/bold 14pt */
 
 --success: hsla(160, 81%, 41%, 1);
---warning: hsla(44, 89%, 52%, 1);
---danger: hsla(11, 81%, 49%, 1);
+--warning: hsla(44, 89%, 62%, 1);
+--danger: hsla(11, 91%, 55%, 1);
 }
